[package]
name = "tmpl"
version = "0.1.1"
authors = ["Florian Dehau <work@fdehau.com>"]
description = """
A simple cli tool that renders Tera templates using variables defined in JSON
files
"""
keywords = ["cli"]
repository = "https://github.com/fdehau/tmpl"
license = "MIT"
exclude = [".travis.yml"]

[badges]
travis-ci = { repository = "fdehau/tmpl" }

[dependencies]
clap = "2.30"
serde_json = "1.0"
failure = "0.1.1"
tera = "0.11.5"

[dev-dependencies]
assert_cli = "0.5.4"
tempdir = "0.3"
