[package]
name = "tmpl"
version = "0.1.1"
authors = ["Florian Dehau <work@fdehau.com>"]
description = """
A simple cli tool that renders Tera templates using variables defined in JSON
files
"""
keywords = ["cli"]
repository = "https://github.com/fdehau/tmpl"
license = "MIT"
exclude = [".travis.yml"]
edition = "2018"

[badges]
travis-ci = { repository = "fdehau/tmpl" }

[dependencies]
clap = "2.32"
serde_json = "1.0"
tera = "0.11"

[dev-dependencies]
assert_cli = "0.6"
tempdir = "0.3"
