[package]
name = "tmpl"
version = "0.3.0"
authors = ["Florian Dehau <work@fdehau.com>"]
description = """
A simple cli tool that renders Tera templates using variables defined in JSON
files.
"""
keywords = ["cli"]
repository = "https://github.com/fdehau/tmpl"
license = "MIT"
edition = "2018"

[dependencies]
serde_json = "1"
tera = "1"
anyhow = "1"
argh = "0.1"

[dev-dependencies]
assert_cmd = "1"
assert_fs = "1"
